// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false 1`] = `
":host {
  scroll-margin-block-start: calc(max(2px, var(--_p-select-option-a, 1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--_p-select-option-a, 1) * 6px) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(img) {
  font: var(--p-typescale-sm) var(--p-font-porsche-next) !important;
  width: auto !important;
  height: var(--p-leading-normal) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.option {
  display: flex;
  gap: calc(11.2px * (var(--_p-select-option-a) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--_p-select-option-a) - 0.64285714) + 4px);
  padding-inline: var(--_p-select-option-b, calc(16.8px * (var(--_p-select-option-a) - 0.64285714) + 6px)) calc(16.8px * (var(--_p-select-option-a) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.icon {
  margin-inline-start: auto;
}
@media(forced-colors:active) {
  .option--disabled {
    color: GrayText;
  }
  .option--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true 1`] = `
":host {
  opacity: 0.4 !important;
  scroll-margin-block-start: calc(max(2px, var(--_p-select-option-a, 1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--_p-select-option-a, 1) * 6px) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(img) {
  font: var(--p-typescale-sm) var(--p-font-porsche-next) !important;
  width: auto !important;
  height: var(--p-leading-normal) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(forced-colors:active) {
  :host {
    opacity: 1 !important;
    color: GrayText !important;
  }
}

.option {
  display: flex;
  gap: calc(11.2px * (var(--_p-select-option-a) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--_p-select-option-a) - 0.64285714) + 4px);
  padding-inline: var(--_p-select-option-b, calc(16.8px * (var(--_p-select-option-a) - 0.64285714) + 6px)) calc(16.8px * (var(--_p-select-option-a) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.icon {
  margin-inline-start: auto;
}
@media(forced-colors:active) {
  .option--disabled {
    color: GrayText;
  }
  .option--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
}
"
`;
